<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/LoginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/aliuser_title_back_normal"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/login_account"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="40dp"
            android:src="@mipmap/picre1" />

        <EditText
            android:id="@+id/inputaccount"
            android:layout_width="272dp"
            android:layout_height="43dp"
            android:layout_marginLeft="80dp"
            android:background="#FFF"
            android:hint="@string/inputaccount"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <View
            android:id="@+id/view2"
            android:paddingLeft="400dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="0.5dp"
            android:background="@color/base_color"
            android:layout_below="@+id/inputaccount"/>

        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="274dp"
            android:layout_height="44dp"
            android:layout_marginLeft="80dp"
            android:background="#FFF"
            android:hint="@string/inputpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <View
            android:id="@+id/view3"
            android:paddingLeft="400dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="0.5dp"
            android:background="@color/base_color"
            android:layout_below="@+id/inputpassword"/>

        <Button
            android:id="@+id/loginbutton"
            style="@android:style/Widget.DeviceDefault.Light.Button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button"
            android:text="@string/loginbutton" />

        <Button
            android:id="@+id/tvReg"
            style="@android:style/Widget.DeviceDefault.Light.Button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/tvReg" />






    </LinearLayout>

</LinearLayout>